use proper object constructor call